--- a/ux-shells.css
+++ b/ux-shells.css
@@ -13,7 +13,7 @@
     	-webkit-flex: 1 auto;
         -moz-flex: 1 auto;
         -ms-flex: 1 auto;
-        flex: 1 auto; 
+        flex: 1 auto;
          }
         
     article.multi-column section:first-of-type aside {
@@ -77,7 +77,7 @@
 		color: #3e3e3e; }
 		
 	.panel-shell section > ul li i {
-		font-size: 3.5vh;
+		font-size: 3.5vmin;
 		margin-bottom: .5vw; }
 	.panel-shell section > ul li a {
 		padding: 1vw 0;
